--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
+</head>
 <body marginwidth="0">
   <app-root>Loading...</app-root>
   
-<script type="text/javascript" src="inline.c4bdf08db7be56873324.bundle.js"></script><script type="text/javascript" src="polyfills.b574a1cef2d026533f79.bundle.js"></script><script type="text/javascript" src="vendor.dbcc96c007355afb765f.bundle.js"></script><script type="text/javascript" src="main.3cce138b6757252e79ae.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
